--- a/readme.adoc
+++ b/readme.adoc
@@ -4,7 +4,7 @@ DIAS GmbH <info@dias.de>
 :lang: de
 
 In diesem Projekt werden Prüfschritte des https://bitvtest.de[BIK BITV-Tests (Web)] für die Barrierefreiheit von Webseiten
-entwickelt. Neue Meilenstein-Versionen werden bei Bedarf, mindestens quartalsweise festgesetzt.
+entwickelt. Neue Meilenstein-Versionen werden bei Bedarf, spätestens quartalsweise festgesetzt.
 
 Die zugrunde liegenden Kriterien richten sich nach der aktuell veröffentlichen https://www.etsi.org/deliver/etsi_en/301500_301599/301549/03.02.01_60/en_301549v030201p.pdf[EU Norm 301 549 V3.2.1 (PDF)].
 
